sly_test/const.cc
//
// Created by 石立宇 on 2023/8/15.
//
#include "sly.h"


int main(){

    int a1 = 10;
    const int a2 = 20;
    a1 = 20;
    //a2 = 30;  //error

    return 0;
}